# advanced_c_exercises

./: .gitignore  CMakeLists.txt
AuctionClient/: AuctionClient.sln  CMakeLists.txt
AuctionClient/AuctionClient/: AuctionClient.vcxproj  AuctionClient.vcxproj.filters  CMakeLists.txt  auctionClient.c  sources.cmake
AuctionClientLinux/: CMakeLists.txt  auctionClient.c
AuctionServer/: AuctionServer.sln  CMakeLists.txt
AuctionServer/AuctionServer/: AuctionServer.vcxproj  AuctionServer.vcxproj.filters  CMakeLists.txt  auctionServer.c
AuctionServerLinux/: CMakeLists.txt  auctionServer.c  sources.cmake
Contacts/: CMakeLists.txt  Contacts.sln
Contacts/Contacts/: CMakeLists.txt  Contacts.vcxproj  Contacts.vcxproj.filters  contacts.c  sources.cmake
FileIndexer/: CMakeLists.txt  FileIndexer.sln
FileIndexer/FileIndexer/: CMakeLists.txt  FileIndexer.vcxproj  FileIndexer.vcxproj.filters  fileIndexer.c  sources.cmake
FileIndexerLinux/: CMakeLists.txt  fileIndexer.c
Hospital/: CMakeLists.txt  Hospital.sln
Hospital/Hospital/: CMakeLists.txt  Hospital.vcxproj  Hospital.vcxproj.filters  clinic.c  clinic.h  hospital.c  measurement.c  measurement.h  patient.c  patient.h  sources.cmake  vector.c  vector.h
InventoryAVL/: CMakeLists.txt  InventoryAVL.sln
InventoryAVL/InventoryAVL/: CMakeLists.txt  InventoryAVL.vcxproj  InventoryAVL.vcxproj.filters  inventoryAVL.c  sources.cmake
MNISTImages/: CMakeLists.txt  MNISTImages.sln
MNISTImages/MNISTImages/: CMakeLists.txt  MNISTImages.c  MNISTImages.vcxproj  MNISTImages.vcxproj.filters  sources.cmake
MazeSolver/: CMakeLists.txt  MazeSolver.sln
MazeSolver/MazeSolver/: CMakeLists.txt  MazeSolver.vcxproj  MazeSolver.vcxproj.filters  mazeSolver.c  sources.cmake
Movies/: CMakeLists.txt  Movies.sln
Movies/Movies/: CMakeLists.txt  Movies.vcxproj  Movies.vcxproj.filters  movies.c
Movies2/: CMakeLists.txt  Movies2.sln
Movies2/Movies2/: CMakeLists.txt  Movies2.vcxproj  movies.c  sources.cmake
Pacman/: CMakeLists.txt  Pacman.sln
Pacman/Pacman/: CMakeLists.txt  Pacman.vcxproj  main.c  (+8 more)
Reservations/: CMakeLists.txt  Reservations.sln
SocialNetwork/: CMakeLists.txt  SocialNetwork.sln
Songs/: CMakeLists.txt  Songs.sln
SyntaxChecker/: CMakeLists.txt  SyntaxChecker.sln
Todo/: CMakeLists.txt  Todo.sln
UniversityCourses/: CMakeLists.txt  UniversityCourses.sln
UniversityCourses/UniversityCourses/: CMakeLists.txt  UniversityCourses.vcxproj  UniversityCourses.vcxproj.filters  sources.cmake  universityCourses.c
WebServerCache/: CMakeLists.txt  WebServerCache.sln
WebServerCacheLinux/: CMakeLists.txt  webServerCache.c
(+42 files in other folders)
