# Advanced_C_Exercises/CMakeLists.txt
# Created by Robin Rowe 2024-04-07
# License MIT Open Source

cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(Advanced_C_Exercises)
message("Configuring ${CMAKE_PROJECT_NAME}...")

if(NOT WIN32 AND NOT APPLE)
	link_libraries(rt pthread)
endif(NOT WIN32 AND NOT APPLE)

option(SUPPRESS "Enable suppression of code warnings" true)
if(SUPPRESS)
	if(WIN32)
		add_definitions(-D_CRT_SECURE_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS /wd4244 /wd4305 /wd4018 /wd26451 /wd6031 /wd4267 /wd6308)
	endif(WIN32)
endif(SUPPRESS)

option(UNISTD "Enable libunistd" true)
if(UNISTD)
	if(WIN32)
#		message("CMAKE_GENERATOR_PLATFORM = ${CMAKE_GENERATOR_PLATFORM}")
		set(LIBUNISTD_PATH /code/github/libunistd)
		include_directories(${LIBUNISTD_PATH}/unistd)
		set (UNISTD_LINK_DIRECTORIES ${LIBUNISTD_PATH}/build/${CMAKE_GENERATOR_PLATFORM}/Release)
		message(libunistd = ${UNISTD_LINK_DIRECTORIES}/libunistd.lib)
		link_directories(${UNISTD_LINK_DIRECTORIES})
		link_libraries(libunistd Ws2_32 Imm32)
	endif(WIN32)
endif(UNISTD)

add_subdirectory(./AuctionClient/AuctionClient)
add_subdirectory(./AuctionClientLinux)
add_subdirectory(./AuctionServer/AuctionServer)
add_subdirectory(./AuctionServerLinux)
add_subdirectory(./Contacts/Contacts)
add_subdirectory(./FileIndexer/FileIndexer)
add_subdirectory(./FileIndexerLinux)
add_subdirectory(./Hospital/Hospital)
add_subdirectory(./InventoryAVL/InventoryAVL)
add_subdirectory(./Library/Library)
add_subdirectory(./MNISTImages/MNISTImages)
add_subdirectory(./MazeSolver/MazeSolver)
add_subdirectory(./Movies/Movies)
add_subdirectory(./Movies2/Movies2)
add_subdirectory(./Packages/Packages)
add_subdirectory(./Pacman/Pacman)
# add_subdirectory(./Reservations/Reservations)
add_subdirectory(./SocialNetwork/SocialNetwork)
add_subdirectory(./Songs/Songs)
add_subdirectory(./SyntaxChecker/SyntaxChecker)
add_subdirectory(./Todo/Todo)
add_subdirectory(./UniversityCourses/UniversityCourses)
add_subdirectory(./WebServerCache/WebServerCache)
add_subdirectory(./WebServerCacheLinux)
